public class Order {
    private String dato;
    private long orderNo;
    private long customerNo;
    private int quanityOrdered;




}
