import java.util.ArrayList;

public class PickList {
    public String dato;
    private ArrayList<String> picklist;



}
