public class Product {
    // instans variabel
    protected String name;
    protected int dbNo;
    protected String location;

    Product(int dbNo, String name, String location) {  // construktor
        this.dbNo = dbNo;
        this.name = name;
        this.location = location;
    }




}
